--- a/Project_SmartStock/SmartStock/SmartStock/Dockerfile
+++ b/Project_SmartStock/SmartStock/SmartStock/Dockerfile
@@ -1,23 +1,20 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER app
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["SmartStock/SmartStock.csproj", "SmartStock/"]
-RUN dotnet restore "./SmartStock/./SmartStock.csproj"
-COPY . .
-WORKDIR "/src/SmartStock"
-RUN dotnet build "./SmartStock.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+COPY Project_SmartStock/SmartStock/SmartStock/SmartStock.csproj SmartStock/
+RUN dotnet restore "SmartStock/SmartStock.csproj"
+
+COPY Project_SmartStock/SmartStock/SmartStock/ SmartStock/
+
+WORKDIR /src/SmartStock
+RUN dotnet build "SmartStock.csproj" -c Release -o /app/build
 
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./SmartStock.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "SmartStock.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
